# sorteio

./: README.md  backup.txt  extract_all_usernames.py  extract_usernames.py  install.sh  process_usernames.py  test-backend.html  test_instagram.py
backend/: .env  .env.example  .gitignore  PLAYWRIGHT_README.md  cleanup_browser.py  database.py  file_scraper.py  instagram_service.py  main.py  models.py  playwright_scraper.py  pyproject.toml  requirements.txt  schemas.py  setup_instagram_login.py  start.bat  start.sh  test_file_scraper.py
backend/browser_data/: Local State  SingletonCookie  SingletonLock  SingletonSocket
backend/browser_data/Default/: .org.chromium.Chromium.hyAX1G  .org.chromium.Chromium.wySimY  BrowsingTopicsState  Cookies  DIPS  DIPS-wal  Favicons  History  History-journal  Network Action Predictor  Network Persistent State  Preferences  Reporting and NEL  Shortcuts  Top Sites  TransportSecurity  Web Data
backend/browser_data/Default/DawnGraphiteCache/: data_1  index
backend/browser_data/Default/DawnWebGPUCache/: data_1  index
backend/browser_data/Default/Extension Rules/: LOG
backend/browser_data/Default/Extension Scripts/: LOG
backend/browser_data/Default/Extension State/: LOG  LOG.old
backend/browser_data/GrShaderCache/: data_1  index
backend/browser_data/GraphiteDawnCache/: data_1  index
backend/browser_data/ShaderCache/: data_1  index
backend/browser_data/segmentation_platform/: ukm_db
backend/instagram_sessions/: session-casadosomsobral
backend/routers/: instagram.py  participants.py  raffles.py
frontend/: index.html  (+3 more)
(+2943 files in other folders)
